--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,37 +1,61 @@
+/*MOBILE STYLE*/
+@media (max-width: 768px) {
+	.carousel div.carousel-caption{
+		
+	}
+	.carousel img{
+		height: 100%;	
+		width: 100%;	
+		object-fit: cover;
+	}
+	.welcome .display-4{
+		font-size: 30px;
+	}
+	.welcome span.web-title{
+		font-size: 55px;
+	}
+	.carousel{
+		height: 100%;
+	}
+	.welcome input.search-bar{
+		padding-top: 7px;
+		padding-bott: ;om: 7px;
+		padding-left: 15px;
+		border-radius: 25px;
+		width: 350px;
+	}
+	.welcome a.btn{
+		transform: scale(0.8);
+	}
+	
+	.navbar ul.navbar-nav{
+		background-color: #ffc107;
+	}
+	.navbar .nav-item{
+		
+	}
+}
 /*JUMBOTRON STYLE IS BELOW HERE!*/
 
-.jumbotron{
-	/*background-image: url(../img/bg1.png);*/
-	background-color: transparent;
-	background-size: cover;
-	height: 700px;
-	/*border-bottom: 10px solid #ffc107;*/
-	text-align: center;
-}
-
-.jumbotron .display-4{
+.welcome .display-4{
 	color: white;
 	margin-top: 125px;
 }
 
-.jumbotron .lead{
-	color: white;
-}
-
-.jumbotron .web-title{
+.welcome .web-title{
 	font-weight: bold;
 	font-size: 75px;
 	color: white;
 	line-height: 50px;
 }
 
-.jumbotron hr{
+.welcome hr{
 	border-color: #ffc107;
 	width: 7pc;
 	border-width: 3px;
 }
 
-.jumbotron .btn{
+.welcome .btn{
 	border: none;
 	border-radius: 25px;
 	padding: 8px 60px;
@@ -39,20 +63,32 @@
 	font-weight: bold;
 }
 
-.jumbotron .search-bar{
+.carousel img{
+	width: 100%;
+}
+.welcome .search-bar{
+	display: block;
 	width: 600px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 15px;
 	border-radius: 25px;
 	margin: auto;
+	margin-top: 30px;
+	margin-bottom: 10px;
 
+}
+.welcome{
+	position: absolute;
+	z-index: 10;
+	text-align: center;
+	width: 100%;
+	margin-top: 60px;
 }
 
 /*IMAGE SLIDE STYLE IS BELOW HERE!*/
 .carousel-item{
-	height: 635px;
-	/*border-bottom: 10px solid #ffc107;*/
+	height: 700px;
 }
 
 .row-slide{
@@ -63,8 +99,15 @@
 	top: 0px;
 }
 
+/*STYLE KULINER POPULER*/
+h4.popular-sign{
+	width: 100%;
+	background-color: #ffc107;
+}
 
-
-
-
+.card-img-top{
+	height: 175px;
+	object-fit: cover;
+	object-position: center;
+}
 
