--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,6 +253,7 @@ p#deskripsi-kuliner{
 }
 
 h5.card-title{
+	line-height: 100%;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
