--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,8 +252,11 @@ p#deskripsi-kuliner{
 	right: 10px;
 }
 
-h5.card-title{
-	line-height: 100%;
+p.card-title{
+	margin: 0px 0px 0px 0px;
+	padding: 0px 0px 0px 0px;
+	box-sizing: border-box;
+	font-size: 16px;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
